fix banner on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,8 @@ body {
 
   align-items: flex-start;
   justify-content: center;
+
+  background-color: rgba(11, 70, 56);
 }
 
 main {
@@ -24,7 +26,7 @@ main {
   margin-top: 200px;
   position: relative;
 
-  @media (min-width: 800px) {
+  @media (min-width: 1000px) {
     margin-top: 350px;
   }
 }
