--- a/src/components/slotmachine.module.css
+++ b/src/components/slotmachine.module.css
@@ -85,6 +85,11 @@
     margin: -80px 0;
   }
 
+  @media (max-width: 300px) {
+    transform: scale(0.4);
+    margin: -80px 0;
+  }
+
   @media (min-width: 1001px) {
     transform: translateY(200%);
     animation: enterBottom 1s forwards;
@@ -270,6 +275,18 @@
   animation-delay: 0.5s, 1s;
   animation-fill-mode: forwards, forwards;
   animation-iteration-count: 1, infinite;
+
+  @media (max-width: 1000px) {
+    width: 469px;
+    height: 90px;
+    bottom: 130px;
+  }
+
+  @media (max-width: 600px) {
+    width: 309px;
+    height: 50px;
+    bottom: 150px;
+  }
 }
 
 @keyframes wave {
